# tuiql

./: AGENTS.md  Cargo.toml  README.md  prompt.md
.github/workflows/: release.yml
Formula/: tuiql.rb
docs/: AGENTS.md  CLAUDE1.md  CLAUDE2.md  PLAN.md  PRD.md  STATUS.md  USER_GUIDE.md
docs/packaging/: AUR.md
install/: install.ps1  install.sh
scoop/: tuiql.json
src/: catalog.rs  command_palette.rs  config.rs  db.rs  diff.rs  fts5.rs  integration_tests.rs  json1.rs  json_viewer.rs  lib.rs  main.rs  plan.rs  plugins.rs  query_editor.rs  record_inspector.rs  repl.rs  results_grid.rs  schema_map.rs  sql.rs  sql_completer.rs  test_utils.rs  tui.rs
src/core/: error.rs  mod.rs
src/schema_navigator/: mod.rs
src/snapshots/: tuiql__json_viewer__tests__json_viewer_array.snap  tuiql__json_viewer__tests__json_viewer_empty.snap  tuiql__json_viewer__tests__json_viewer_nested_structure.snap  tuiql__json_viewer__tests__json_viewer_simple_object.snap  tuiql__json_viewer__tests__json_viewer_with_focus.snap  tuiql__record_inspector__tests__record_inspector_empty_record.snap  tuiql__record_inspector__tests__record_inspector_mixed_fields.snap  tuiql__record_inspector__tests__record_inspector_preview.snap  tuiql__record_inspector__tests__record_inspector_simple_record.snap  tuiql__record_inspector__tests__record_inspector_with_json_field.snap  tuiql__results_grid__tests__results_grid_empty.snap  tuiql__results_grid__tests__results_grid_large_viewport_end.snap  tuiql__results_grid__tests__results_grid_large_viewport_middle.snap  (+7 more)
tests/: property_tests.rs  results_grid_tests.rs
(+8 files in other folders)
