[package]
name = "tuiql"
version = "0.1.0"
edition = "2021"
description = "A blazing-fast, terminal-native, keyboard-centric SQLite client."
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
crossterm = "0.25"
ratatui = "0.20"
rusqlite = { version = "0.29", features = ["bundled"] }
sqlparser = "0.16"
reedline = "0.9"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7"
serde_json = "1.0"
toml = "0.5"
tracing-subscriber = "0.3"
once_cell = "1.8"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "2.0.16"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
proptest = "1.3"
proptest-derive = "0.4"
insta = "1.39"
